--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ h3 {
     max-height:65px!important;
     min-height:65px!important;
     min-width: 65px!important;
+    border-radius: 50px;
 
 }
 
